--- a/style.css
+++ b/style.css
@@ -60,21 +60,59 @@ header {
   background-color: rgba(212, 248, 222, 0.539);
   display: flex;
   justify-content: space-between;
+  align-items: flex-end;
+  }
+  .menu {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+  }
+  
+  .menu ul {
+    list-style: none;
+    padding: 0;
+    display: flex;
+  }
+  
+  .menu ul li {
+    margin-right: 20px;
+  }
+  
+  .menu ul li a {
+    text-decoration: none;
+  }
 
-  > nav {
+  /* .menu {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+  }
+  .menu ul {
+      list-style: none;
+      padding:0;
+      display: flex;
+      
+      > li {
+        margin-right: 20px;
+        > a {
+          text-decoration: none;
+        }
+      }
+  } */
+
+  /* > nav {
     display: flex;
     align-items: flex-end;
     margin-right: 10px;
     > a {
-      /* display: inline-block;
-            justify-content: space-evenly; */
+
       display: inline-block;
       position: relative;
       padding: 1em;
       text-decoration: none;
     }
-  }
-}
+  } */
+
 
 footer {
   background-color: rgba(212, 248, 222, 0.539);
@@ -101,11 +139,12 @@ footer {
 .img-wide {
   height: 200px;
   width: 100%;
-  opacity: 0.8;
+  opacity: 0.5;
 }
 
 .image-inline {
   display: inline;
+  opacity: 0.8;
 }
 
 .small-image {
@@ -121,6 +160,7 @@ footer {
   display: flex;
   justify-content: space-evenly;
   padding: 40px 20px;
+  background-color: #e5fff487;
 }
 
 section {
@@ -134,10 +174,102 @@ article {
     display: flex;
     align-items: center;
     padding-left: 20px;
-    max-width: 35%;
+    max-width: 50%;
+    min-width: 50%;
     line-height: 1.6;
   }
   > img {
-    margin-right: 40px;
+    /* margin-right: 40px; */
+    min-width: 150px;
+    max-height: 270px;
   }
+}
+img {
+  /* margin-right: 40px; */
+max-width: 100%;
+height: auto;
+}
+
+@media screen and (max-width: 508px) {
+  .medium-large-screen {
+    display: none;
+  }
+
+  header {
+    display: flex;
+  }
+
+  .menu ul {
+    list-style: none;
+    padding: 0;
+    display: flex;
+    flex-direction: row;
+      > li {
+        margin-right: 30px;
+      }
+  }
+  
+ 
+
+  .menu  {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+  }
+}
+
+
+@media screen and (max-width: 900px) {
+  img {
+    /* margin-right: 40px; */
+max-width: 100%;
+height: auto;
+  }
+
+  html {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .inline-justify-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* padding: 10px 10px;
+    margin: 20px 20px; */
+    > img {
+      /* display: block;
+      margin: auto;
+      max-width: 100%; */
+      margin: 10px 10px;
+      min-width: 250px;
+    }
+
+    .remove-image-small-screen {
+      display: none;
+    }
+  }
+
+  .logotyp {
+    min-width: 70px;
+    height: auto;
+  }
+
+  article {
+    display: flex;
+    padding: 20px;
+    flex-direction: column;
+    align-items: center;
+    > p {
+      margin-top: 20px;
+      min-width: 90%;
+    }
+
+    .small-image {
+      margin-top: 20px;
+      margin-bottom: 20px;
+    }
+}
+
 }
